test/Fail/Issue998d.err
Issue998d.agda:7.9-10: error: [UnequalSorts]
Set ℓ != Set Issue998d.ℓ
when checking that the expression A has type Set ℓ
